2.0.3.1:
* Added a setting to customize the userlist display format
* Added a setting to enable the HTMLOutput plugin
* Moved the HTMLOutput userlist to logs

2.0.3 (r1072) 2008-01-07:
* Completely redesigned the command subsystem to fit a more object-oriented model
* Commands not in the database will be created with maximum (master) access
* Changed server, port, and channel to profile-specific fields
* Replaced EventHandler semaphores with synchronized code blocks
* Fixed a race condition with joining restricted channels
* Fixed a bug with selecting CD keys
* Added lag icons
* Improved the logic for constructing the text label on each profile tab
* Configurable tray notifications
* Fixed a bug where it was impossible to stay disconnected
* Connect/disconnect/reconnect affect each connection of a profile
* Multiple commands can be used at once with a semicolon delimiter
* Added a 'rejoin' command
* Added tab-completion style slash command completion
* Fixed a bug where tab-completion would select all text with certain look and feels
* Added a "What's New" window
* Customizable BNetUser.toString()

2.0.2.2 (r1022) 2007-12-22:
* Fixed a bug that prevented banning users outside of the channel
* Allow editing cdkeys from the connection settings window
* Closing profiles
* Pressing the 'cancel' button on 'new profile' settings window closes the profile
* Pressing the 'cancel' button when no CD keys are entered will not bring the window back
* Fixed a bug where 'apply' didn't redraw the window correctly
* Fixed a bug with lowercase CD keys
* Improved version comparison logic

2.0.2.1 (r1000) 2007-12-12:
* Extended Settings read/write methods
* Fixed a bug where the CLI would cause 100% CPU use
* Added an option to change the profile in the GUI
* Fixed a bug where plugins would receive initialize() twice
* Add settings menu items for each connection of a profile
* Secondary EHs now receive titleChanged()
* Better discovery of JDBC drivers
* Fixed a bug with 'new profile'